--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
 # can use verions as well, like gcc:5.2
 # see https://hub.docker.com/_/gcc/
 #image: nvidia/cuda:7.5-devel-centos7
-image: nvidia/cuda:8.0-devel
+image: tc/cuda:7.5-devel-centos7
 
 build:
   stage: build
